Russian Localization (Not fully finished)
I did about 80% of all the work, made some kind of localization file, shoveled a bunch of text, and so on. The translation is not 100% correct and reliable, I am even sure of it, and I really want someone who understands this more and better than me to do it, I have already" built "a"launch pad" for this.
I worked on all this for 3-4 days and was very tired. I have been continuously translating various mods for about two weeks and I think that it is worth taking a little vacation.
Please check all the lines that I have edited and tell me what is allowed to translate, what is not allowed, and how to do it correctly.

--- a/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/Pipeline.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/Pipeline.cfg
@@ -32,9 +32,9 @@ PART
 	cost = 18000
 	category = Utility
 	subcategory = 0
-	title = Pipeline Mass Driver
+	title = #LOC_WBI_Pathfinder_PipelineMassDriver_Title
 	manufacturer = Wild Blue Industries
-	description = Pipeline is a combined mass driver and mass catcher. It can launch Rocket-assisted Object Containers (ROCs) hundreds of kilometers away to another Pipeline Mass Driver or to an Orbital Pipeline. The maximum payload capacity varies based factors like range to the target and the pull of gravity. Launching a ROC costs guidance data to calculate the trajectory, ElectricCharge to launch the projectile, and LiquidFuel and Oxidizer for course corrections.
+	description = #LOC_WBI_Pathfinder_PipelineMassDriver_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -175,18 +175,18 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasembleEditor
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
 
-		partToolTipTitle = Pipeline Mass Driver
-		partToolTip = You can transfer KIS items between facilities and craft in addition to resources.
+		partToolTipTitle = #LOC_WBI_Pathfinder_PipelineMassDriver_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_PipelineMassDriver_ToolTip
 
-		opsViewTitle = Pipeline Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_PipelineMassDriver_opsViewTitle
 
 		//If the part has a KIS container, this is the base and max amount
 		baseStorage = 0.001
