--- a/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/Rangeland.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/Rangeland.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 1800
 	category = Utility
 	subcategory = 0
-	title = Rangeland Disposable Launchpad
+	title = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_Title
 	manufacturer = Wild Blue Industries
-	description = This extraplanetary launchpad is a great alternative to survey stakes.
+	description = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_Description2
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -113,8 +113,8 @@ MODULE
 	{
 		name = WBILight
 		animationName = RangelandLights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
 		ecRequired = 0.001
 		red = 1
 		green = 1
@@ -137,10 +137,10 @@ MODULE
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasembleEditor
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
@@ -160,10 +160,10 @@ MODULE
 
 		decalsVisible = false
 
-		partToolTipTitle = Rangeland Construction Pad
-		partToolTip = More than just a nice landing pad, the Rangeland is an extraplanetary launchpad that can be used to construct new vessels.
+		partToolTipTitle = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_ToolTip
 
-		opsViewTitle = Rangeland Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_opsViewTitle
 		showOpsView = false
 	}
 
@@ -200,7 +200,7 @@ RANGELAND
 {
 	author = Angel-125
 	name = Rangeland
-	description = This extraplanetary launchpad is a great alternative to survey stakes.
+	description = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_Description2
 	reconfigureSkill = ConverterSkill
 
 	INPUT_RESOURCE
