--- a/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/ranchHouse.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/DeprecatedParts/ranchHouse.cfg
@@ -70,9 +70,9 @@ PART
 	cost = 800
 	category = none
 	subcategory = 0
-	title = Hogan
+	title = #LOC_WBI_Pathfinder_Hogan_Title
 	manufacturer = Wild Blue Industries
-	description = The Hogan is a large multipurpose building. It can become a community center that generates production bonuses for your drills and coverters, and generate science data for labs, GoldStrike prospecting, and Pipeline mass drivers. It can become a dormatory with good life support capabilities that also attracts Tourists. And it can become a study hall where kerbals can train up and teach Tourists how to be Pilots, Engineers, or Scientists. The more kerbals residing in the Hogan, the greater the data produced.
+	description = #LOC_WBI_Pathfinder_Hogan_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -178,10 +178,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Expand
+		startEventGUIName = #autoLOC_6001338
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
@@ -208,10 +208,10 @@ PART
 		baseStorage = 0.0001
 		maxStorage = 20000
 
-		partToolTipTitle = Your First Hogan
-		partToolTip = The Hogan is more than just a community center. It provides an efficiency bonus to all converters attached to the vessel. It also generates science data that can be fed to a Doc Science Lab or Mobile Processing Lab, into the Gold Strike Prospctor that gives bonuses to finding a Gold Strike lode, and targeting data for a Pipeline mass driver.
+		partToolTipTitle = #LOC_WBI_Pathfinder_Hogan_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_Hogan_ToolTip
 
-		opsViewTitle = Hogan Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_Hogan_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
