--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
@@ -3,9 +3,9 @@
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Make RocketParts
-		StartActionName = Start RocketParts
-		StopActionName = Stop RocketParts
+		ConverterName = #LOC_WBI_Pathfinder_RocketParts_Title
+		StartActionName = #LOC_WBI_Pathfinder_RocketParts_StartAction
+		StopActionName = #LOC_WBI_Pathfinder_RocketParts_StopAction
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
@@ -49,9 +49,9 @@
 	{
 		
 		name = ModuleResourceConverter
-		ConverterName = Smelt Metal
-		StartActionName = Start Smelting
-		StopActionName = Stop Smelting
+		ConverterName = #LOC_WBI_Pathfinder_SmeltMetal_Title
+		StartActionName = #LOC_WBI_Pathfinder_SmeltMetal_StartAction
+		StopActionName = #LOC_WBI_Pathfinder_SmeltMetal_StopAction
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
@@ -86,9 +86,9 @@
 	{
 		
 		name = ModuleResourceConverter
-		ConverterName = Recycle ScrapMetal
-		StartActionName = Start Recycling
-		StopActionName = Stop Recycling
+		ConverterName = #LOC_WBI_Pathfinder_RecycleMetal_Title
+		StartActionName = #LOC_WBI_Pathfinder_RecycleMetal_StartAction
+		StopActionName = #LOC_WBI_Pathfinder_RecycleMetal_StopAction
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
@@ -126,9 +126,9 @@
 	{
 		
 		name = ModuleResourceConverter
-		ConverterName = Scrap Equipment
-		StartActionName = Start scrapping Equipment
-		StopActionName = Stop scrapping Equipment
+		ConverterName = #LOC_WBI_Pathfinder_ScrapEquipment_Title
+		StartActionName = #LOC_WBI_Pathfinder_ScrapEquipment_StartAction
+		StopActionName = #LOC_WBI_Pathfinder_ScrapEquipment_StopAction
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
