--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
@@ -225,9 +225,9 @@
 	MODULE
 	{
 		name = WBIGreenhouse
-		ConverterName = Greenhouse
-		StartActionName = Start Grenhouse
-		StopActionName = Stop Greenhouse
+		ConverterName = #LOC_WBI_Pathfinder_Greenhouse_Title
+		StartActionName = #LOC_WBI_Pathfinder_Greenhouse_StartAction
+		StopActionName = #LOC_WBI_Pathfinder_Greenhouse_StopAction
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = true
