--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize2.cfg
@@ -17,9 +17,9 @@ PART
 	cost = 8000
 	category = Aero
 	subcategory = 0
-	title = Lasso-200 Aero/Hydro Scoop
+	title = #LOC_WBI_Pathfinder_Aero_Lasso200_Title
 	manufacturer = Wild Blue Industries
-	description = Not your typical turbofan intake, the Lasso can separate atmospheric gasses and oceanic liquids into useful resources.
+	description = #LOC_WBI_Pathfinder_Aero_Lasso_Description
 	attachRules = 1,1,0,1,0
 	mass = 1.6
 	heatConductivity = 0.06 // half default
