--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize3.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize3.cfg
@@ -17,9 +17,9 @@ PART
 	cost = 16000
 	category = Aero
 	subcategory = 0
-	title = Lasso-300 Aero/Hydro/Exo Scoop
+	title = #LOC_WBI_Pathfinder_Aero_Lasso300_Title
 	manufacturer = Wild Blue Industries
-	description = Not your typical turbofan intake, the Lasso can separate atmospheric gasses and oceanic liquids into useful resources. Unlike the smaller versions, this version also has the ability to scoop up exo-atmospheric gasses as well.
+	description = #LOC_WBI_Pathfinder_Aero_Lasso_Description
 	attachRules = 1,1,0,1,0
 	mass = 3.2
 	heatConductivity = 0.06 // half default
