--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/OrbitalPipeline.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/OrbitalPipeline.cfg
@@ -19,9 +19,9 @@ PART
 	cost = 18000
 	category = Utility
 	subcategory = 0
-	title = Orbital Pipeline
+	title = #LOC_WBI_Pathfinder_OrbitalPipeline_Title
 	manufacturer = Wild Blue Industries
-	description = Like its ground-based counterpart, the Pipeline Orbital Mass Driver can shoot Rocket-assisted Object Containers (ROCs) vast distances- but only to other orbiting mass drivers. It can also receive ROCs from other mass drivers. Launching a ROC costs guidance data to calculate the trajectory, ElectricCharge to launch the projectile, and LiquidFuel and Oxidizer for course corrections. The destinations are limited by changes to orbital altitude and orbital inclination- best results can be obtained by small differences in both altitude and inclination.
+	description = #LOC_WBI_Pathfinder_OrbitalPipeline_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
