--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/arcReactor.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/arcReactor.cfg
@@ -55,9 +55,9 @@ PART
 	cost = 4000
 	category = Utility
 	subcategory = 0
-	title = A.R.C. Fusion Reactor
+	title = #LOC_WBI_Pathfinder_ArcFusionReactor_Title
 	manufacturer = Wild Blue Industries
-	description = The Affordable Robust Compact fusion reactor generates an enormous amount of electricity for your base's power needs. It generates much more than the Solar Flare version of the Hacienda due to being a permanent installation.
+	description = #LOC_WBI_Pathfinder_ArcFusionReactor_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -93,9 +93,9 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		ConverterName = Fusion Reactor
-		StartActionName = Start Reactor
-		StopActionName = Stop Reactor
+		ConverterName = #LOC_WBI_Pathfinder_ArcFusionReactor_ConverterFusReac
+		StartActionName = #LOC_WBI_Pathfinder_ArcFusionReactor_StartReactor
+		StopActionName = #LOC_WBI_Pathfinder_ArcFusionReactor_StopReactor
 		FillAmount = 1.0
 		 
 		AutoShutdown = true
@@ -136,9 +136,9 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		ConverterName = EPS Transformer
-		StartActionName = Start EPS Transformer
-		StopActionName = Stop EPS Transformer
+		ConverterName = #LOC_WBI_Pathfinder_ArcFusionReactor_ConverterEPS
+		StartActionName = #LOC_WBI_Pathfinder_ArcFusionReactor_StartEPSTrans
+		StopActionName = #LOC_WBI_Pathfinder_ArcFusionReactor_StopEPSTrans
 		FillAmount = 1.0
 		 
 		AutoShutdown = true
@@ -184,18 +184,18 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
 
-		partToolTipTitle = Your First ARC Reactor
-		partToolTip = Moar power!
+		partToolTipTitle = #LOC_WBI_Pathfinder_ArcFusionReactor_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_ArcFusionReactor_ToolTip
 
-		opsViewTitle = ARC Reactor Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_ArcFusionReactor_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
