--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castillo.cfg
@@ -93,9 +93,9 @@ PART
 	cost = 6200
 	category = Utility
 	subcategory = 0
-	title = Castillo
+	title = #LOC_WBI_Pathfinder_Castillo_Title
 	manufacturer = Wild Blue Industries
-	description = The Castillo is a large prototype arcology that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots. It indoor park doubles as a large greenhouse as well.
+	description = #LOC_WBI_Pathfinder_Castillo_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -256,15 +256,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 1
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle1
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 2
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle2
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -276,15 +276,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 2
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle2
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 3
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle3
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -296,15 +296,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 3
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle3
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -316,15 +316,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 4
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle4
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -384,10 +384,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Crew capacity when inflated
 		inflatedCrewCapacity = 32
@@ -399,10 +399,10 @@ PART
 		baseStorage = 0.0001
 		maxStorage = 20000
 
-		partToolTipTitle = Your First Castillo
-		partToolTip = The Castillo is a large multipurpose building that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots.
+		partToolTipTitle = #LOC_WBI_Pathfinder_Castillo_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_Castillo_ToolTip
 
-		opsViewTitle = Castillo Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_Castillo_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;StaleAir
@@ -483,5 +483,5 @@ PART
 PART_TIP
 {
 	name = wbiRanchHouse2
-	description = The Castillo REQUIRES resource distribtion to be turned on, and a nearby storage container with the necessary resources, in order to be assembled. HINT: When placing the part on the ground, make sure the boxes along the perimiter don't collide with nearby parts.
+	description = #LOC_WBI_Pathfinder_Castillo_partTipDescription
 }
