--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloAdapter.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloAdapter.cfg
@@ -20,9 +20,9 @@ PART
 	cost = 1200
 	category = Utility
 	subcategory = 0
-	title = Castillo Adapter
+	title = #LOC_WBI_Pathfinder_CastilloAdapter_Title
 	manufacturer = Wild Blue Industries
-	description = At some point, somebody will want to build a Sandcastle component on an asteroid or spacecraft. This adapter makes it easier.
+	description = #LOC_WBI_Pathfinder_CastilloAdapter_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -116,10 +116,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Crew capacity when inflated
 		inflatedCrewCapacity = 32
@@ -131,10 +131,10 @@ PART
 		baseStorage = 0.0001
 		maxStorage = 20000
 
-		partToolTipTitle = Your First Castillo
-		partToolTip = The Castillo is a large multipurpose building that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots.
+		partToolTipTitle = #LOC_WBI_Pathfinder_Castillo_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_Castillo_ToolTip
 
-		opsViewTitle = Castillo Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_Castillo_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
