--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloObservatory.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloObservatory.cfg
@@ -93,9 +93,9 @@ PART
 	cost = 9200
 	category = Utility
 	subcategory = 0
-	title = Castillo Observatory
+	title = #LOC_WBI_Pathfinder_CastilloObservatory_Title
 	manufacturer = Wild Blue Industries
-	description = Part of the Castillo line of colony parts, the Castillo Observatory generates science data for various purposes, has omni converters for producing materials for science experiments, and can even track vessels and planetary bodies and observe them with the right equipment.
+	description = #LOC_WBI_Pathfinder_CastilloObservatory_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -213,9 +213,9 @@ PART
 		name = WBIScienceDataGenerator
 		debugMode = false
 
-		ConverterName = Science Data Generator
-		StartActionName = Start Generating Data
-		StopActionName = Stop Generating Data
+		ConverterName = #LOC_WBI_Pathfinder_CastilloObservatory_ConverterName
+		StartActionName = #LOC_WBI_Pathfinder_CastilloObservatory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloObservatory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -254,9 +254,9 @@ PART
 	MODULE
 	{
 		name = ModuleScienceContainer
-		reviewActionName = Review Data
-		storeActionName = Store Experiments
-		collectActionName = Take Data
+		reviewActionName = #autoLOC_502201
+		storeActionName = #autoLOC_502202
+		collectActionName = #autoLOC_6001311
 		evaOnlyStorage = True
 		storageRange = 2
 		allowRepeatedSubjects = True
@@ -291,9 +291,9 @@ PART
 		reputationPerData = 1.0//How much Reputation per point of data
 		scienceCap = 800	//How much science can we store before having to transmit?		
 		powerRequirement = 5	//EC/Sec to research
-		ConverterName = Research
-		StartActionName = Start Research
-		StopActionName = Stop Research
+		ConverterName = #autoLOC_502055
+		StartActionName = #autoLOC_502056
+		StopActionName = #autoLOC_502057
 	}
 
 	MODULE
@@ -404,9 +404,9 @@ PART
 
 		isGUIVisible = false
 		experimentID = WBISpaceResearch
-		ConverterName = Lab Time
-		StartActionName = Start Lab Time
-		StopActionName = Stop Lab Time
+		ConverterName = #LOC_WBI_Pathfinder_CastilloObservatory_LabTime
+		StartActionName = #LOC_WBI_Pathfinder_CastilloObservatory_StartLab
+		StopActionName = #LOC_WBI_Pathfinder_CastilloObservatory_StopLab
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -468,15 +468,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 1
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle1
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 2
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle2
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -488,15 +488,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 2
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle2
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 3
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle3
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -508,15 +508,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 3
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle3
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -528,15 +528,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 4
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle4
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_ConverterStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConverterStopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -689,10 +689,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Crew capacity when inflated
 		inflatedCrewCapacity = 32
@@ -704,10 +704,10 @@ PART
 		baseStorage = 0.0001
 		maxStorage = 20000
 
-		partToolTipTitle = Your First Castillo
-		partToolTip = The Castillo is a large multipurpose building that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots.
+		partToolTipTitle = #LOC_WBI_Pathfinder_Castillo_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_Castillo_ToolTip
 
-		opsViewTitle = Castillo Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_Castillo_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;StaleAir
