--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
@@ -46,9 +46,9 @@ PART
 	cost = 8000
 	category = Utility
 	subcategory = 0
-	title = Drilling Rig
+	title = #LOC_WBI_Pathfinder_DrillingRig_Title
 	manufacturer = Wild Blue Industries
-	description = What this drilling rig lacks in portability, it makes up for in its ability to extract resources from the ground. It has a small amount of underground storage to assist with resource distribution.
+	description = #LOC_WBI_Pathfinder_DrillingRig_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -70,8 +70,8 @@ PART
 	{
 		name = WBIAnimation
 		animationName = DrillAnim
-		startEventGUIName = Activate
-		endEventGUIName = Deactivate
+		startEventGUIName = #LOC_WBI_Pathfinder_DrillStartEventGUIName
+		endEventGUIName = #LOC_WBI_Pathfinder_DrillEndEventGUIName
 		playAnimationLooped = true
 		guiIsVisible = false
 	}
@@ -82,9 +82,9 @@ PART
 		HarvesterType = 0
 		Efficiency = 6
 		ResourceName = Ore
-		ConverterName = Ore
-		StartActionName = Start Strip Mining
-		StopActionName = Stop Strip Mining
+		ConverterName = #LOC_WBI_Pathfinder_DrillingRig_ConverterName
+		StartActionName = #LOC_WBI_Pathfinder_DrillStartActionName
+		StopActionName = #LOC_WBI_Pathfinder_DrillStopActionName
 		drillAnimationName = DrillAnim
 		ImpactTransform = ImpactTransform
 		ImpactRange = 15
@@ -173,18 +173,18 @@ PART
 		animationLayer = 8
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
 
-		partToolTipTitle = Your First Ground Station
-		partToolTip = The Ground Station is a powerful relay that can be operated independently of a base and combined with other ground stations for extended range.
+		partToolTipTitle = #LOC_WBI_Pathfinder_DrillingRig_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_DrillingRig_ToolTip
 
-		opsViewTitle = Ground Station Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_DrillingRig_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
