--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/groundStation.cfg
@@ -55,9 +55,9 @@ PART
 	cost = 4000
 	category = Utility
 	subcategory = 0
-	title = Ground Station
+	title = #LOC_WBI_Pathfinder_GroundStation_Title
 	manufacturer = Wild Blue Industries
-	description = Out of range of the KSC? Need to deploy a Deep Space Network on another planet? Then the Ground Station is for you!
+	description = #LOC_WBI_Pathfinder_GroundStation_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -184,9 +184,9 @@ PART
 		name = WBIScienceDataGenerator
 		debugMode = false
 
-		ConverterName = Science Data Generator
-		StartActionName = Calculate trajectory data
-		StopActionName = Stop calculating data
+		ConverterName = #LOC_WBI_Pathfinder_GroundStation_ConverterName
+		StartActionName = #LOC_WBI_Pathfinder_GroundStation_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_GroundStation_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -233,18 +233,18 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
 
-		partToolTipTitle = Your First Ground Station
-		partToolTip = The Ground Station is a powerful relay that can be operated independently of a base and combined with other ground stations for extended range.
+		partToolTipTitle = #LOC_WBI_Pathfinder_DrillingRig_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_DrillingRig_ToolTip
 
-		opsViewTitle = Ground Station Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_DrillingRig_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
