--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
@@ -93,9 +93,9 @@ PART
 	cost = 6200
 	category = Utility
 	subcategory = 0
-	title = Castillo Depot
+	title = #LOC_WBI_Pathfinder_CastilloDepot_Title
 	manufacturer = Wild Blue Industries
-	description = Part of the Castillo line, the depot is an enormous warehouse to store all your stuff.
+	description = #LOC_WBI_Pathfinder_CastilloDepot_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -228,9 +228,9 @@ PART
 	MODULE
 	{
 		name = WBIMeshToggle
-		objects = Dome
-		showMeshesName = Add Dome
-		hideMeshesName = Remove Dome
+		objects = #LOC_WBI_Pathfinder_Domes_Dome
+		showMeshesName = #LOC_WBI_Pathfinder_Domes_AddDome
+		hideMeshesName = #LOC_WBI_Pathfinder_Domes_RemoveDome
 		guiVisible = true
 		meshesVisible = true
 	}
@@ -265,10 +265,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Crew capacity when inflated
 		inflatedCrewCapacity = 32
@@ -280,10 +280,10 @@ PART
 		baseStorage = 0.0001
 		maxStorage = 20000
 
-		partToolTipTitle = Your First Castillo
-		partToolTip = The Castillo is a large multipurpose building that primarily serves as a community center, dormitory, and tourist trap. It can level up experienced astronauts as well as train tourists into scientists, engineers, and pilots.
+		partToolTipTitle = #LOC_WBI_Pathfinder_Castillo_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_Castillo_ToolTip
 
-		opsViewTitle = Castillo Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_Castillo_opsViewTitle
 
 		//Snacks
 		// resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir
