--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/walkway1X.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/walkway1X.cfg
@@ -92,9 +92,9 @@ PART
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = Walkway
+	title = #LOC_WBI_Pathfinder_Walkway_Title
 	manufacturer = Wild Blue Industries
-	description = This walkway gives your base components more space and provides a place to attach Buckboards or other accessories.
+	description = #LOC_WBI_Pathfinder_Walkway_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -183,16 +183,16 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
 
-		partToolTipTitle = Your First Walkway
-		partToolTip = Use these to put space between your base parts.
+		partToolTipTitle = #LOC_WBI_Pathfinder_Walkway_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_Walkway_ToolTip
 
 		//List of part modules that should be enabled/disabled depending upon whether or not the part is deployed.
 		MANAGED_MODULES
