--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -46,9 +46,9 @@ PART
 	cost = 10000
 	category = Science
 	subcategory = 0
-	title = Doc Science Lab
+	title = #LOC_WBI_Pathfinder_DocScienceLab_Title
 	manufacturer = Wild Blue Industries
-	description = The Doc Inflatable Multipurpose Science Lab (IMSL) does for laboratories what the Ponderosa does for habitats. You can reconfigure the Doc to perform different scientific functions such as the Doc Commercial Science Lab and the Watnet Chemistry Lab. Innovative kerbals might provide additional configurations in the future. The Doc is well suited for research on the ground, but it isn't as effective in orbit.
+	description = #LOC_WBI_Pathfinder_DocScienceLab_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -77,9 +77,9 @@ PART
 	MODULE
 	{
 		name = ModuleScienceContainer
-		reviewActionName = Review Data
-		storeActionName = Store Experiments
-		collectActionName = Take Data
+		reviewActionName = #autoLOC_502201
+		storeActionName = #autoLOC_502202
+		collectActionName = #autoLOC_6001311
 		evaOnlyStorage = True
 		storageRange = 2
 		allowRepeatedSubjects = True
@@ -114,9 +114,9 @@ PART
 		reputationPerData = 1.0//How much Reputation per point of data
 		scienceCap = 800	//How much science can we store before having to transmit?		
 		powerRequirement = 5	//EC/Sec to research
-		ConverterName = Research
-		StartActionName = Start Research
-		StopActionName = Stop Research
+		ConverterName = #autoLOC_502055
+		StartActionName = #autoLOC_502056
+		StopActionName = #autoLOC_502057
 	}
 
 	MODULE
@@ -143,10 +143,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasemble
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
@@ -175,8 +175,8 @@ PART
 		baseStorage = 2000
 		maxStorage = 2000
 
-		partToolTipTitle = Your First Commercial Lab
-	partToolTip = Just like a multipurpose habitat, this general-purpose science lab can be reconfigured for several different science roles with a feat of engineering- if you have the right resources and talent. A bastion of science, resources made by one of the lab's configurations will benefit from chemical analysis.
+		partToolTipTitle = #LOC_WBI_Pathfinder_DocScienceLab_ToolTipTitle
+	partToolTip = #LOC_WBI_Pathfinder_DocScienceLab_ToolTip
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
@@ -225,8 +225,8 @@ PART
 	{
 		name = WBILight
 		animationName = DocSciLights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
 		ecRequired = 0.04
 	}
 
