--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/Terrain.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/Terrain.cfg
@@ -17,9 +17,9 @@ PART
 	cost = 15000
 	category = Science
 	subcategory = 0
-	title = T.E.R.R.A.I.N Geo Scanner
+	title = #LOC_WBI_Pathfinder_TerrainGeoScanner_Title
 	manufacturer = TerraOptics Inc
-	description = The Thermal Emissions and Reflection Radiometer with Automated, Integrated Network (TERRAIN) Scanner is designed to detect and analyze resource deposits on the surface of a celestial body. Simply fly the sensor into a polar orbit and activate it. And cross your fingers and hope it works. The TERRAIN is a prototype, so it might require a service mission should it fail to function. Just be sure to pack spare rocket parts.
+	description = #LOC_WBI_Pathfinder_TerrainGeoScanner_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
@@ -65,9 +65,9 @@ PART
 	MODULE
 	{
 		name = ModuleScienceContainer
-		reviewActionName = Review Data
-		storeActionName = Store Experiments
-		collectActionName = Take Data
+		reviewActionName = #autoLOC_502201
+		storeActionName = #autoLOC_502202
+		collectActionName = #autoLOC_6001311
 		evaOnlyStorage = True
 		storageRange = 2
 		allowRepeatedSubjects = True
@@ -76,9 +76,9 @@ PART
 	MODULE
 	{
 		name = GeoSurveyCamera
-		ConverterName = Geosurvey
-		StartActionName = Start Geosurvey
-		StopActionName = Stop Geosurvey
+		ConverterName = #LOC_WBI_Pathfinder_Geosurvey
+		StartActionName = #LOC_WBI_Pathfinder_GeosurveyStartAction
+		StopActionName = #LOC_WBI_Pathfinder_GeosurveyStopAction
 		AutoShutdown = false
 		GeneratesHeat = false
 		hoursPerCycle = 6
