--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Captstone.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Captstone.cfg
@@ -37,9 +37,9 @@ entryCost = 3200
 cost = 250
 category = Structural
 subcategory = 0
-title = Capstone Crew Tube Cap
+title = #LOC_WBI_Pathfinder_CapstoneCrewTubeCap_Title
 manufacturer = Wild Blue Industries
-description = For the fashion conscious, the Capstone provides and endcap to close off those unsightly unused crew tubes.
+description = #LOC_WBI_Pathfinder_CapstoneCrewTubeCap_Description
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 1,1,0,1,1
 
