--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Patio.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Patio.cfg
@@ -27,9 +27,9 @@ entryCost = 1500
 cost = 240
 category = Structural
 subcategory = 0
-title = Patio Concrete Slab
+title = #LOC_WBI_Pathfinder_PatioConcreteSlab_Title
 manufacturer = Wild Blue Industries
-description = Made from the finest stuff not on Kerbin, the Patio is made from "Muncrete," a generic term that mixes local regolith with chemicals in the kit to form a fast-drying concrete slab. Its stored volume represents the chemical package used to create the slab. Once formed, simply radially attach it to a ground pilon or a Saddle. The Patio is designed to provide a small level surface that you can build upon, but it has connector points to clip additional slabs together to form a larger surface.  WARNING: Use at your own risk, this is an experimental part.
+description = #LOC_WBI_Pathfinder_PatioConcreteSlab_Description
 
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 1,1,1,1,1
