--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
@@ -23,9 +23,9 @@ PART
 	cost = 400
 	category = Structural
 	subcategory = 0
-	title = Saddle Muncrete Slab
+	title = #LOC_WBI_Pathfinder_SaddleMuncreteSlab_Title
 	manufacturer = Wild Blue Industries
-	description = Made from the finest stuff not on Kerbin, the Saddle is made from "Muncrete," a generic term that mixes local regolith with chemicals in the kit to form a fast-drying concrete slab. Once formed, simply bolt the Saddle into the ground. The slab contains mounting brackets for quick and easy installation of containerized inflatable modules as well as the SC-62 Standard Container. Not responsible for artistic hands that get stuck in the fast-drying muncrete.
+	description = #LOC_WBI_Pathfinder_SaddleMuncreteSlab_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
