--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
@@ -42,9 +42,9 @@ PART
 	cost = 1800
 	category = Structural
 	subcategory = 0
-	title = Switchback 2 Base Hub
+	title = #LOC_WBI_Pathfinder_Switchback2BaseHub_Title
 	manufacturer = Wild Blue Industries
-	description = The Switchback 2 is a 4-way hub specially designed for attaching your inflatable base modules. It even comes with an integrated solar panel for a small amount of ElectricCharge and a bit of storage space. This new version also includes an integrated base with a built-in KAS pipe. No attachment to the Saddle needed. Some assembly required after pulling it from storage. Instructions not included.
+	description = #LOC_WBI_Pathfinder_Switchback2BaseHub_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
