--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/TunnelExtender.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/TunnelExtender.cfg
@@ -20,9 +20,9 @@ PART
 	cost = 1800
 	category = Structural
 	subcategory = 0
-	title = Tunnel Extender
+	title = #LOC_WBI_Pathfinder_TunnelExtender_Title
 	manufacturer = Wild Blue Industries
-	description = Need a bit more space between your modules? Not enough places to attach your stuff? The Tunnel Extender is for yoU! It even comes with an integrated solar panel for a small amount of ElectricCharge. Some assembly required after pulling it from storage. Instructions not included.
+	description = #LOC_WBI_Pathfinder_TunnelExtender_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
