--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Upgrades.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Upgrades.cfg
@@ -6,10 +6,10 @@ PARTUPGRADE
 	entryCost = 10000
 	cost = 0 // for display only; all parts implementing this will need a PartStatsUpgradeModule with cost = this.
 	
-	title = Pathfinder Quality Upgrade 1
+	title = #LOC_WBI_Pathfinder_UpgradeQ1_Title
 	basicInfo = Quality: 25, MTBF: 800hrs
 	manufacturer = Wild Blue Industries
-	description = Field experience and revised manufacturing techniques have improved the production quality and mean time between failures.
+	description = #LOC_WBI_Pathfinder_UpgradeQ1_Description
 }
 
 PARTUPGRADE
@@ -20,8 +20,8 @@ PARTUPGRADE
 	entryCost = 30000
 	cost = 0 // for display only; all parts implementing this will need a PartStatsUpgradeModule with cost = this.
 	
-	title = Pathfinder Quality Upgrade 2
+	title = #LOC_WBI_Pathfinder_UpgradeQ2_Title
 	basicInfo = Quality: 30, MTBF: 900hrs
 	manufacturer = Wild Blue Industries
-	description = Field experience and revised manufacturing techniques have improved the production quality and mean time between failures.
+	description = #LOC_WBI_Pathfinder_UpgradeQ2_Description
 }
