--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/AKIPowerStrip.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/AKIPowerStrip.cfg
@@ -52,9 +52,9 @@ PART:NEEDS[SEPScience]
 	cost = 50
 	category = Electrical
 	subcategory = 0
-	title = AKI Power Strip
+	title = #LOC_WBI_Pathfinder_AKIPowerStrip_Title
 	manufacturer = Wild Blue Industries
-	description = Sometimes you just need more places to plug your stuff into. Sometimes you ignore the warning labels to not overload the power circuits.
+	description = #LOC_WBI_Pathfinder_AKIPowerStrip_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
