--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Bulldozer.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Bulldozer.cfg
@@ -16,9 +16,9 @@ PART:NEEDS[KerbalKonstructs]
 	cost = 2800
 	category = Utility
 	subcategory = 0
-	title = Buffalo Bulldozer
+	title = #LOC_WBI_Pathfinder_BuffaloBulldozer_Title
 	manufacturer = Wild Blue Industries
-	description = This bulldozer specializes in scraping the local regolith into flat surfaces to build bases on. It takes time, so patience is a virtue, but if the vessel is crewed by those with the construction skill, the build rate can be improved.
+	description = #LOC_WBI_Pathfinder_BuffaloBulldozer_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,0
@@ -38,8 +38,8 @@ PART:NEEDS[KerbalKonstructs]
 	MODULE
 	{
 		name = WBIStaticBuilder
-		startBuildProcessName = Start Bulldozing
-		stopBuildProcessName = Stop Bulldozing
+		startBuildProcessName = #LOC_WBI_Pathfinder_BuffaloBulldozer_StartBuldozing
+		stopBuildProcessName = #LOC_WBI_Pathfinder_BuffaloBulldozer_StopBuldozing
 
 		//Tag that tells us which statics we're allowed to spawn. STATIC node must have a "tags" field.
 		tag = bulldozer
