--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -26,9 +26,9 @@ PART
 	cost = 8000
 	category = Utility
 	subcategory = 0
-	title = Casa IHM
+	title = #LOC_WBI_Pathfinder_CasaIHM_Title
 	manufacturer = Wild Blue Industries
-	description = The Casa Inflatable Habitat Module (IHM) is the non-containerized version of the Ponderosa. It is designed to fulfill the habitation needs of your base. It can be configured for a wide variety of different purposes, such as the Pathfinder Geology Lab and Ponderosa Habitat. It takes an Engineer to assemble.
+	description = #LOC_WBI_Pathfinder_CasaIHM_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -110,8 +110,8 @@ PART
 	{
 		name = WBILight
 		animationName = Ponderosa2Lights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
 		ecRequired = 0.001
 	}
 
@@ -130,10 +130,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasemble
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
@@ -155,7 +155,7 @@ PART
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
-		defaultTemplate = GeoLab
+		defaultTemplate = #LOC_WBI_Pathfinder_CasaIHM_defaultTemplate
 
 		//Name of the logo panel transforms
 		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003
@@ -165,9 +165,10 @@ PART
 		baseStorage = 2000
 		maxStorage = 8000
 
-		partToolTipTitle = Your First Habitat
-		partToolTip = Want to use the Ponderosa for more than one purpose? With a feat of engineering, you can change it in the field. For a price... The cornerstone of your habitation needs, resources created in one of the module's many configurations will benefit from soil analysis.
-opsViewTitle = Ponderosa Operations
+		partToolTipTitle = #LOC_WBI_Pathfinder_CasaIHM_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_CasaIHM_ToolTip
+		
+		opsViewTitle = #LOC_WBI_Pathfinder_CasaIHM_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
