--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
@@ -58,9 +58,9 @@ PART
 	cost = 5200
 	category = FuelTank
 	subcategory = 0
-	title = Conestoga MLM
+	title = #LOC_WBI_Pathfinder_ConestogaMLM_Title
 	manufacturer = Wild Blue Industries
-	description = The Multipurpose Base Module (MBM) serves as a foundation for your bases; just attach inflatable modules to its access ports and set the module directly onto the ground with nothing underneath. It even has attachment points for rover wheels (like the M1A1) to move the module into place, and its fuel cell and solar panels will keep the lights on until a crew arrives. The all new Conestoga Mk2 is so different from the original that only the name remains the same. You could even say that Engineers stole the name from the original.
+	description = #LOC_WBI_Pathfinder_ConestogaMLM_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
@@ -96,9 +96,9 @@ PART
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = MPU
-		StartActionName = Start MPU
-		StopActionName = Stop MPU
+		ConverterName = #LOC_WBI_Pathfinder_ConestogaMLM_ConverterName
+		StartActionName = #LOC_WBI_Pathfinder_ConestogaMLM_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_ConestogaMLM_StopActionName
 		FillAmount = 0.99		 
 		AutoShutdown = true
 		GeneratesHeat = false
@@ -234,9 +234,9 @@ PART
 	{
 		name = WBILight
 		animationName = ConestogaLights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-		actionGUIName = Lights On/Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
+		actionGUIName = #autoLOC_502011
 		red = 1
 		green = 1
 		blue = 1
@@ -267,12 +267,12 @@ PART
 
 CONESTOGA
 {
-	name = Bootstrap
+	name = #LOC_WBI_Pathfinder_ConestogaMLM_Bootstrap
 	author = Angel-125
-	shortName = Bootstrap
+	shortName = #LOC_WBI_Pathfinder_ConestogaMLM_Bootstrap
 	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Bootstrap
 	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/BootstrapGlow
-	description = This kit is used to help bootstrap new bases. It contains rocket fuel to help land the Conestoga as well as a small amount of material kits to 3D print items and some research kits to conduct research with.
+	description = #LOC_WBI_Pathfinder_ConestogaMLM_Bootstrap_Description
 
 	RESOURCE
 	{
