--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
@@ -36,9 +36,9 @@ PART
 	cost = 250
 	category = Utility
 	subcategory = 0
-	title = Gaslight Telescopic Lamppost
+	title = #LOC_WBI_Pathfinder_GaslightTelescopicLamppost_Title
 	manufacturer = Wild Blue Industries
-	description = Need a light? The Gaslight Telescopic Lamppost is for you! Simply bolt it to the ground (if you can run into it and move it, it's not bolted properly), hook it up to your base, extend the pole, and turn on the lights. The Gaslight also includes an MC-16 communications sytem, turning it into a deployable radio tower, and it can serve as a 4-way pipe junction.
+	description = #LOC_WBI_Pathfinder_GaslightTelescopicLamppost_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -79,16 +79,16 @@ PART
 	{
 		name = WBIAnimation
 		animationName = Deploy
-		startEventGUIName = Extend
-		endEventGUIName = Retract
+		startEventGUIName = #autoLOC_6001338
+		endEventGUIName = #autoLOC_6001339
 	}
 
 	MODULE
 	{
 		name = WBIGaslight
 		animationName = Gaslight
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_6001406
+		endEventGUIName = #autoLOC_6001407
 		ecRequired = 0.04
 		red = 1
 		green = 1
