--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -18,9 +18,9 @@ PART
 	cost = 8000
 	category = Utility
 	subcategory = 0
-	title = Gold Digger Portable Mini-Drill
+	title = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_Title
 	manufacturer = Kerbodyne / Wild Blue Industries
-	description = Also known as the Dancing Devil, the Gold Digger digs into the crust of planets or into asteroids to obtain core samples. These samples are then analyzed to determine the accuracy of resource scans which will improve or hinder resource extraction rates for all drills in the biome. It can also serve as a mini resource drill in a pinch; when operated by a skilled scientist, you'll be able to improve its efficiency. Comes with a free case of dust wipes.
+	description = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_Description
 	attachRules = 0,1,0,0,0
 
 	// --- standard part parameters ---
@@ -38,10 +38,10 @@ PART
 		HarvesterType = 0
 		Efficiency = 0.3
 		ResourceName = Ore
-		ConverterName = Surface Harvester
-		StartActionName = Start Surface Harvester
-		StopActionName = Stop Surface Harvester
-		ToggleActionName = Toggle Surface Harvester
+		ConverterName = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_ConverterName
+		StartActionName = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_StopActionName
+		ToggleActionName = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_ToggleActionName
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
@@ -63,10 +63,10 @@ PART
 	{
 		name = WBIGoldStrikeAsteroidDrill
 		DirectAttach = false
-		ConverterName = Asteroid Drill
-		StartActionName = Start Asteroid Harvester 
-		StopActionName = Stop Asteroid Harvester
-		ToggleActionName = Toggle Asteroid Harvester
+		ConverterName = #autoLoc_6003029
+		StartActionName = #autoLOC_502042
+		StopActionName = #autoLOC_502043
+		ToggleActionName = #autoLOC_502044
 		PowerConsumption = 0.3
 		Efficiency = 1
 		ImpactRange = 1.5
@@ -137,14 +137,14 @@ PART
 		name = WBIModuleCoreSample
 		resourceType = 0
 		drillTechNode = advConstruction
-		analysisGUIName = Take Core Sample
-		analysisActionName = Run Analysis
+		analysisGUIName = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_analysisGUIName
+		analysisActionName = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_analysisActionName
 		analysisSkill = Scientist
 		analysisTime = 5
 
 		experimentID = WBICoreSampleAnalysis
-		experimentActionName = Core Sample
-		resetActionName = Delete Data
+		experimentActionName = #LOC_WBI_Pathfinder_GoldDiggerPortableMiniDrill_experimentActionName
+		resetActionName = #autoLOC_502064
 		useStaging = False
 		useActionGroups = True
 		hideUIwhenUnavailable = False
