--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -46,9 +46,9 @@ PART
 	cost = 15000
 	category = Utility
 	subcategory = 0
-	title = Hacienda IMF
+	title = #LOC_WBI_Pathfinder_HaciendaIMF_Title
 	manufacturer = Wild Blue Industries
-	description = The Hacienda Inflatable Multipurpose Factory (IMF) has the works. Specifically, it has the Ironworks Foundry, where you can smelt metals and create RocketParts. Other works are possible with the right upgrades.
+	description = #LOC_WBI_Pathfinder_HaciendaIMF_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -139,10 +139,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasemble
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
@@ -171,9 +171,9 @@ PART
 		baseStorage = 14500
 		maxStorage = 14500
 
-		partToolTipTitle = Your First Industrial Plant
-		partToolTip = This module is the cornerstone for all your industrial needs. It is a captain of industry; resources created in the module's various configurations will benefit from metallurgic analysis.
-		opsViewTitle = Hacienda Operations
+		partToolTipTitle = #LOC_WBI_Pathfinder_HaciendaIMF_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_HaciendaIMF_ToolTip
+		opsViewTitle = #LOC_WBI_Pathfinder_HaciendaIMF_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = Snacks
@@ -234,8 +234,8 @@ PART
 	{
 		name = WBILight
 		animationName = HaciendaLights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
 		ecRequired = 0.001
 	}
 
