--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
@@ -35,9 +35,9 @@ PART
 	cost = 1600
 	category = Payload
 	subcategory = 0
-	title = Mule MLM
+	title = #LOC_WBI_Pathfinder_MuleMLM_Title
 	manufacturer = Wild Blue Industries
-	description = The Mule Multipurpose Logistics Module (MLM) is designed to provide storage for a variety of different materials and supplies. Simply configure it to the desired storage type before launch and optionally load the desired supplies. It used to be called the Conestoga, but another engineering group stole the name.
+	description = #LOC_WBI_Pathfinder_MuleMLM_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
