--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
@@ -36,9 +36,9 @@ PART
 	cost = 500
 	category = Utility
 	subcategory = 0
-	title = Old Faithful
+	title = #LOC_WBI_Pathfinder_OldFaithful_Title
 	manufacturer = Wild Blue Industries
-	description = Heat from your drills and power plants got you down? The Old Faithful portable cooling tower has you covered. Simply attach this to your base, inflate it, and turn on the radiator.
+	description = #LOC_WBI_Pathfinder_OldFaithful_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -104,9 +104,9 @@ PART
 	{
 		name = WBICoolingTower
 		animationName = Deploy
-		startEventGUIName = Assemble
-		endEventGUIName = Disassemble
-		actionGUIName = Toggle Assembly
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasemble
+		actionGUIName = #LOC_WBI_Pathfinder_GUInameToggleAssebly
 		isInflatable = True
 	}
 
