--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Poncho.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Poncho.cfg
@@ -17,9 +17,9 @@ PART
 	cost = 1125
 	category = Electrical
 	subcategory = 0
-	title = Poncho Solar Panel
+	title = #LOC_WBI_Pathfinder_PonchoSolarPanel_Title
 	manufacturer = Wild Blue Industries
-	description = While the Poncho does not have any sun tracking, it generates a lot of power once deployed. Not for use as giant playing cards or for spelling messages out in the dirt.
+	description = #LOC_WBI_Pathfinder_PonchoSolarPanel_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,1,1
