--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/RecyclerArm.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/RecyclerArm.cfg
@@ -37,9 +37,9 @@ PART
 	cost = 750
 	category = none
 	subcategory = 0
-	title = Buffalo Recycler Arm
+	title = #LOC_WBI_Pathfinder_PonchoSolarPanel_Title
 	manufacturer = Wild Blue Industries
-	description = When a construction site or favorite orbit becomes cluttered with junk and you don't have a skilled engineer around, this recycler arm can help clean up the mess. Just attach one to your vessel or rover, extend the arm, and aim the blowtorch at the junk part. The part will then be broken down into its usable resources, and any resources it stored will be recovered as well.
+	description = #LOC_WBI_Pathfinder_PonchoSolarPanel_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,0,1,1
@@ -62,9 +62,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = Deploy
-		startEventGUIName = Extend
-		endEventGUIName = Retract
-		actionGUIName = Extend/Retract Recycler
+		startEventGUIName = #autoLOC_6001338
+		endEventGUIName = #autoLOC_7003224
+		actionGUIName = #LOC_WBI_Pathfinder_GUInameExtendRetractRecycler
 	}
 
 	MODULE
