--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
@@ -35,9 +35,9 @@ PART
 	cost = 1750
 	category = Electrical
 	subcategory = 0
-	title = Sombrero Solar Array
+	title = #LOC_WBI_Pathfinder_SombreroSolarArray_Title
 	manufacturer = Wild Blue Industries
-	description = The Sombrero is an advanced solar array that can track the sun in two directions. The dual-axis sun tracking ensures that the circular solar arrays are always pointed at the sun. Note that we said "dual" not "duel." The sun tracking systems don't fight each other. Can't we all just get along?
+	description = #LOC_WBI_Pathfinder_SombreroSolarArray_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
