--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
@@ -35,9 +35,9 @@ PART
 	cost = 1750
 	category = Communication
 	subcategory = 0
-	title = Telegraph Satellite Dish
+	title = #LOC_WBI_Pathfinder_TelegraphSatelliteDish_Title
 	manufacturer = Wild Blue Industries
-	description = For those that want their MTV, the Telegraph Satellite Dish delivers. In addition to having a better data stream than the Gaslight, the Telegraph can relay signals from other craft. It also functions as a birdbath. Assembly instructions not included.
+	description = #LOC_WBI_Pathfinder_TelegraphSatelliteDish_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -59,9 +59,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = Deploy
-		startEventGUIName = Extend
-		endEventGUIName = Retract
-		actionGUIName = Toggle Antenna
+		startEventGUIName = #autoLOC_6001338
+		endEventGUIName = #autoLOC_7003224
+		actionGUIName = #LOC_WBI_Pathfinder_GUInameToggleAntenna
 		allowAnimationWhileShielded = False
 	}
 
