--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/accessoryMount.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/accessoryMount.cfg
@@ -22,9 +22,9 @@ PART
 	cost = 50
 	category = Utility
 	subcategory = 0
-	title = Accessory Mount
+	title = #LOC_WBI_Pathfinder_AccessoryMount_Title
 	manufacturer = Wild Blue Industries
-	description = This handy accessory mount provides a side-mount point for accessories like the Gaslight, Sombrero, and Telegraph.
+	description = #LOC_WBI_Pathfinder_AccessoryMount_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
