--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MF_FFT.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MF_FFT.cfg
@@ -5,9 +5,9 @@
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Fusion Pellets
-		StartActionName = Start Fusion Pellets
-		StopActionName = Stop Fusion Pellets
+		ConverterName = #LOC_WBI_Pathfinder_FusionPellets_Title
+		StartActionName = #LOC_WBI_Pathfinder_FusionPellets_StartAction
+		StopActionName = #LOC_WBI_Pathfinder_FusionPellets_StopAction
 		AutoShutdown = true
 		GeneratesHeat = false
 		DefaultShutoffTemp = .8
