--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize0.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Aero/Lasso/LassoSize0.cfg
@@ -17,9 +17,9 @@ PART
 	cost = 500
 	category = Aero
 	subcategory = 0
-	title = Lasso-60 Aero/Hydro Scoop
+	title = #LOC_WBI_Pathfinder_Aero_Lasso60_Title
 	manufacturer = Wild Blue Industries
-	description = Not your typical turbofan intake, the Lasso can separate atmospheric gasses and oceanic liquids into useful resources.
+	description = #LOC_WBI_Pathfinder_Aero_Lasso_Description
 	attachRules = 1,1,0,1,0
 	mass = 0.1
 	heatConductivity = 0.06 // half default
