--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Pipeline2.cfg
@@ -46,9 +46,9 @@ PART
 	cost = 18000
 	category = Utility
 	subcategory = 0
-	title = Pipeline Mass Driver
+	title = #LOC_WBI_Pathfinder_PipelineMassDriver_Title
 	manufacturer = Wild Blue Industries
-	description = Pipeline is a combined mass driver and mass catcher. It can launch Rocket-assisted Object Containers (ROCs) hundreds of kilometers away to another Pipeline Mass Driver or to an Orbital Pipeline. The maximum payload capacity varies based factors like range to the target and the pull of gravity. Launching a ROC costs guidance data to calculate the trajectory, ElectricCharge to launch the projectile, and LiquidFuel and Oxidizer for course corrections.
+	description = #LOC_WBI_Pathfinder_PipelineMassDriver_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -226,18 +226,18 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
 
-		partToolTipTitle = Pipeline Mass Driver
-		partToolTip = You can transfer KIS items between facilities and craft in addition to resources.
+		partToolTipTitle = #LOC_WBI_Pathfinder_PipelineMassDriver_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_PipelineMassDriver_ToolTip
 
-		opsViewTitle = Pipeline Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_PipelineMassDriver_opsViewTitle
 
 		//If the part has a KIS container, this is the base and max amount
 		baseStorage = 0.001
@@ -303,4 +303,4 @@ PART
 PART_TIP
 {
 	name = wbiPipeline2
-	description = The Pipeline REQUIRES resource distribtion to be turned on, and a nearby storage container with the necessary resources, in order to be assembled. HINT: You can turn off the azimuth restriction from the KSC Settings menu.
+	description = #LOC_WBI_Pathfinder_PipelineMassDriver_partTipDescription
