--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/Rangeland2.cfg
@@ -31,9 +31,9 @@ PART
 	cost = 1800
 	category = Utility
 	subcategory = 0
-	title = Rangeland Disposable Launchpad
+	title = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_Title
 	manufacturer = Wild Blue Industries
-	description = This extraplanetary launchpad is a great alternative to survey stakes. It has underground storage for construction resources.
+	description = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -105,8 +105,8 @@ PART
 	{
 		name = WBILight
 		animationName = RangelandLights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
 		ecRequired = 0.001
 		red = 1
 		green = 1
@@ -158,18 +158,18 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Determines if the part can be reconfigured out in the field.
 		fieldReconfigurable = false
 
-		partToolTipTitle = Rangeland Construction Pad
-		partToolTip = More than just a nice landing pad, the Rangeland is an extraplanetary launchpad that can be used to construct new vessels.
+		partToolTipTitle = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_ToolTip
 
-		opsViewTitle = Rangeland Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_opsViewTitle
 		guiVisible = false
 
 		//List of part modules that should be enabled/disabled depending upon whether or not the part is deployed.
@@ -232,5 +232,5 @@ PART
 PART_TIP
 {
 	name = wbiRangeland2
-	description = The Rangeland REQUIRES resource distribtion to be turned on, and a nearby storage container with the necessary resources, in order to be assembled. HINT: When placing the part on the ground, make sure the boxes along the perimiter don't collide with nearby parts. It does have an attachment port to hook up KAS hoses.
+	description = #LOC_WBI_Pathfinder_RangelandDisposableLaunchpad_partTipDescription
 }
