--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
@@ -93,9 +93,9 @@ PART
 	cost = 6200
 	category = Utility
 	subcategory = 0
-	title = Castillo Factory
+	title = #LOC_WBI_Pathfinder_CastilloFactory_Title
 	manufacturer = Wild Blue Industries
-	description = Part of the Castillo line of parts, the factory not only has numerous omni converters, it can provide efficiency improvements if staffed. The more kerbals in the factory, the higher the efficiency bonus.
+	description = #LOC_WBI_Pathfinder_CastilloFactory_Description
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
 
@@ -218,15 +218,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 1
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle1
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 2
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle2
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -238,15 +238,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 2
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle2
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 3
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle3
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -258,15 +258,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 3
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle3
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -278,15 +278,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 4
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle4
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -298,15 +298,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 5
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle5
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -318,15 +318,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 6
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle6
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -338,15 +338,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 7
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle7
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -358,15 +358,15 @@ PART
 	MODULE
 	{
 		name = WBIOmniConverter
-		managedName = OmniConverter 8
+		managedName = #LOC_WBI_Pathfinder_OmniConverterTitle8
 		templateNodes = OMNICONVERTER
 		BaseEfficiency = 1.0
 		reconfigureSkill = ConverterSkill
 		requiredResource = Equipment
 		requiredAmount = 300
-		ConverterName = OmniConverter 4
-		StartActionName = Start Converter
-		StopActionName = Stop Converter
+		ConverterName = #LOC_WBI_Pathfinder_OmniConverterTitle4
+		StartActionName = #LOC_WBI_Pathfinder_CastilloFactory_StartActionName
+		StopActionName = #LOC_WBI_Pathfinder_CastilloFactory_StopActionName
 		AutoShutdown = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
@@ -455,10 +455,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Collapse (EDITOR ONLY)
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameCollapse
 
 		//Crew capacity when inflated
 		inflatedCrewCapacity = 32
@@ -470,10 +470,10 @@ PART
 		baseStorage = 0.0001
 		maxStorage = 20000
 
-		partToolTipTitle = Your First Castillo Factory
-		partToolTip = The Castillo Factory is a large production facility that's able to produce a variety of different resources.
+		partToolTipTitle = #LOC_WBI_Pathfinder_CastilloFactory_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_CastilloFactory_ToolTip
 
-		opsViewTitle = Castillo Operations
+		opsViewTitle = #LOC_WBI_Pathfinder_Castillo_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;StaleAir
@@ -549,5 +549,5 @@ PART
 PART_TIP
 {
 	name = wbiRanchHouse2
-	description = The Castillo REQUIRES resource distribtion to be turned on, and a nearby storage container with the necessary resources, in order to be assembled. HINT: When placing the part on the ground, make sure the boxes along the perimiter don't collide with nearby parts.
+	description = #LOC_WBI_Pathfinder_Castillo_partTipDescription
 }
