--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
@@ -21,9 +21,9 @@ PART
 	cost = 8000
 	category = Pods
 	subcategory = 0
-	title = Ponderosa IHM
+	title = #LOC_WBI_Pathfinder_PonderosaIHM_Title
 	manufacturer = Wild Blue Industries
-	description = The Ponderosa Inflatable Habitat Module (IHM) is a containerized habitat that can be configured for a wide variety of different purposes.
+	description = #LOC_WBI_Pathfinder_PonderosaIHM_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
@@ -79,9 +79,9 @@ PART
 	MODULE
 	{
 		name = ModuleScienceContainer
-		reviewActionName = Review Data
-		storeActionName = Store Experiments
-		collectActionName = Take Data
+		reviewActionName = #autoLOC_502201
+		storeActionName = #autoLOC_502202
+		collectActionName = #autoLOC_6001311
 		evaOnlyStorage = True
 		storageRange = 2
 		allowRepeatedSubjects = True
@@ -110,8 +110,8 @@ PART
 	{
 		name = WBILight
 		animationName = PonderosaLights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
 		ecRequired = 0.001
 	}
 
@@ -151,10 +151,10 @@ PART
 		animationName = Deploy
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasemble
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
@@ -173,7 +173,7 @@ PART
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
-		defaultTemplate = GeoLab
+		defaultTemplate = #LOC_WBI_Pathfinder_CasaIHM_defaultTemplate
 
 		//Name of the logo panel transforms
 		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003, logoPanel004
@@ -183,9 +183,9 @@ PART
 		baseStorage = 8000
 		maxStorage = 2000
 
-		partToolTipTitle = Your First Habitat
-		partToolTip = Want to use the Ponderosa for more than one purpose? With a feat of engineering, you can change it in the field. For a price... The cornerstone of your habitation needs, resources created in one of the module's many configurations will benefit from soil analysis.
-opsViewTitle = Ponderosa Operations
+		partToolTipTitle = #LOC_WBI_Pathfinder_CasaIHM_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_CasaIHM_ToolTip
+opsViewTitle = #LOC_WBI_Pathfinder_CasaIHM_opsViewTitle
 
 		//Snacks
 		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
@@ -296,6 +296,6 @@ opsViewTitle = Ponderosa Operations
 
 	MODULE
 	{
-		name = Seismometer
+		name = #LOC_WBI_Pathfinder_PonderosaIHM_Seismometer
 	}
 }
