--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
@@ -22,9 +22,9 @@ PART
 	subcategory = -1
 	entryCost = 3800
 	cost = 1800
-	title = Switchback Base Hub
+	title = #LOC_WBI_Pathfinder_SwitchbackBaseHub_Title
 	manufacturer = Wild Blue Industries
-	description = The Switchback is a 4-way hub specially designed for attaching your inflatable base modules. Simply bolt a Saddle into the ground, stick a Switchback on top, and connect your modules. It even comes with an integrated solar panel for a small amount of ElectricCharge and a bit of storage space. Some assembly required after pulling it from storage. Instructions not included.
+	description = #LOC_WBI_Pathfinder_SwitchbackBaseHub_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,1
