--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -45,9 +45,9 @@ PART
 	cost = 500
 	category = Utility
 	subcategory = 0
-	title = Chuckwagon IMW
+	title = #LOC_WBI_Pathfinder_ChuckwagonIMW_Title
 	manufacturer = Wild Blue Industries
-	description = Need a lot of storage space? Then the Chuckwagon Inflatable Multipurpose Warehouse (IMW) is for you! The IMW gives your base ample room to store your stuff, and you can reconfigure the warehouse in the field by simply emptying the contents and choosing another storage configuration.
+	description = #LOC_WBI_Pathfinder_ChuckwagonIMW_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,0,1,1
@@ -90,10 +90,10 @@ PART
 		flightAnimationOnly = True
 
 		//GUI name of deploy animation
-		startEventGUIName = Assemble
+		startEventGUIName = #LOC_WBI_Pathfinder_GUInameAssemble
 
 		//GUI name of retract animation
-		endEventGUIName = Disassemble
+		endEventGUIName = #LOC_WBI_Pathfinder_GUInameDisasemble
 
 		//Determines if the module allows in-field reconfiguring
 		fieldReconfigurable = True
@@ -128,8 +128,8 @@ PART
 		baseStorage = 2000
 		maxStorage = 31400
 
-		partToolTipTitle = Your First Chuckwagon
-		partToolTip = Pathfinders tend to travel light and keep moving, but the Chuckwagon provides ample room for all you packrats wanting to hole up. If you're going to stay awhile, why not science the kraken out of one and turn it into a greenhouse?
+		partToolTipTitle = #LOC_WBI_Pathfinder_CasaIHM_ToolTipTitle
+		partToolTip = #LOC_WBI_Pathfinder_CasaIHM_ToolTip
 	}
 
 	MODULE
@@ -142,8 +142,8 @@ PART
 	{
 		name = WBILight
 		animationName = ChuckwagonLights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
+		startEventGUIName = #autoLOC_502012
+		endEventGUIName = #autoLOC_502013
 		ecRequired = 0.001
 	}
 
