--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -36,9 +36,9 @@ PART
 	cost = 2500
 	category = Utility
 	subcategory = 0
-	title = Spyglass Survey Module
+	title = #LOC_WBI_Pathfinder_SpyglassSurveyModule_Title
 	manufacturer = Wild Blue Industries
-	description = Officially, the Spyglass was created to monitor the creation of new vessels. Unofficially, it makes sure that kerbals aren’t slacking at your off-world bases. Fortunately, the video camera is easily hacked to show whatever is convenient for base personnel. The Spyglass requires an area demarked by Survey Stakes to serve as a construction area.
+	description = #LOC_WBI_Pathfinder_SpyglassSurveyModule_Description
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,0,0,1
@@ -86,8 +86,8 @@ PART
 	{
 		name = WBILight
 		animationName = SpyglassLight
-		startEventGUIName = Turn lights on
-		endEventGUIName = Turn lights off
+		startEventGUIName = #autoLOC_6001406
+		endEventGUIName = #autoLOC_6001407
 		red = 1
 		green = 1
 		blue = 1
@@ -99,9 +99,9 @@ PART
 	{
 		name = WBIAnimateRotate
 		animationName = Deploy
-		startEventGUIName = Extend Lightpole
-		endEventGUIName = Retract Lightpole
-		actionGUIName = Toggle Lightpole
+		startEventGUIName = #LOC_WBI_Pathfinder_SpyglassSurveyModule_startEventGUIName
+		endEventGUIName = #LOC_WBI_Pathfinder_SpyglassSurveyModule_endEventGUIName
+		actionGUIName = #LOC_WBI_Pathfinder_SpyglassSurveyModule_actionGUIName
 		rotationTransform = LightAssembly
 		rotationAxis = 0,0,1
 		rotationRate = 90  //Degrees per second
